--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -8527,6 +8527,10 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     visibility: visible;
   }
 
+  .md\:invisible {
+    visibility: hidden;
+  }
+
   .md\:mb-0 {
     margin-bottom: 0px;
   }
@@ -8675,6 +8679,16 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
