--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -2057,33 +2057,6 @@ html{
   height: auto;
 }
 
-.stack {
-  display: inline-grid;
-  place-items: center;
-  align-items: flex-end;
-}
-
-.stack > * {
-  grid-column-start: 1;
-  grid-row-start: 1;
-  transform: translateY(10%) scale(0.9);
-  z-index: 1;
-  width: 100%;
-  opacity: 0.6;
-}
-
-.stack > *:nth-child(2) {
-  transform: translateY(5%) scale(0.95);
-  z-index: 2;
-  opacity: 0.8;
-}
-
-.stack > *:nth-child(1) {
-  transform: translateY(0) scale(1);
-  z-index: 3;
-  opacity: 1;
-}
-
 .stat {
   display: inline-grid;
   width: 100%;
@@ -4444,6 +4417,10 @@ input.tab:checked + .tab-content,
   margin-bottom: 0.125rem;
 }
 
+.ml-0 {
+  margin-left: 0px;
+}
+
 .ml-8 {
   margin-left: 2rem;
 }
@@ -4600,6 +4577,10 @@ input.tab:checked + .tab-content,
   height: 8rem;
 }
 
+.h-36 {
+  height: 9rem;
+}
+
 .h-4 {
   height: 1rem;
 }
@@ -4676,6 +4657,10 @@ input.tab:checked + .tab-content,
   height: 100vh;
 }
 
+.h-\[36\] {
+  height: 36;
+}
+
 .max-h-14 {
   max-height: 3.5rem;
 }
@@ -4688,6 +4673,10 @@ input.tab:checked + .tab-content,
   max-height: 100%;
 }
 
+.min-h-36 {
+  min-height: 9rem;
+}
+
 .min-h-\[1\.5rem\] {
   min-height: 1.5rem;
 }
@@ -4698,18 +4687,6 @@ input.tab:checked + .tab-content,
 
 .min-h-\[auto\] {
   min-height: auto;
-}
-
-.min-h-full {
-  min-height: 100%;
-}
-
-.min-h-10 {
-  min-height: 2.5rem;
-}
-
-.min-h-36 {
-  min-height: 9rem;
 }
 
 .\!w-px {
@@ -4758,6 +4735,10 @@ input.tab:checked + .tab-content,
 
 .w-24 {
   width: 6rem;
+}
+
+.w-3\/12 {
+  width: 25%;
 }
 
 .w-32 {
@@ -4880,6 +4861,34 @@ input.tab:checked + .tab-content,
 
 .w-screen {
   width: 100vw;
+}
+
+.w-56 {
+  width: 14rem;
+}
+
+.w-9\/12 {
+  width: 75%;
+}
+
+.w-8\/12 {
+  width: 66.666667%;
+}
+
+.w-\[5rem\] {
+  width: 5rem;
+}
+
+.w-\[5em\] {
+  width: 5em;
+}
+
+.w-\[100em\] {
+  width: 100em;
+}
+
+.w-\[50em\] {
+  width: 50em;
 }
 
 .min-w-0 {
@@ -5814,6 +5823,11 @@ input.tab:checked + .tab-content,
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -5909,6 +5923,11 @@ input.tab:checked + .tab-content,
 
 .stroke-white\/20 {
   stroke: rgb(255 255 255 / 0.2);
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover {
@@ -7272,6 +7291,10 @@ body > div.z-\[1070\] > div > div > :is(.dark .dark\:hover\:bg-transparent:hover
   body > div.z-\[1070\] > div > div > div.md\:flex-row.flex.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
     color: rgb(var(--color-content));
   }
+
+  body > div.z-\[1070\] > div > div > div.md\:w-full.flex.flex-row.items-center.justify-between.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+    color: rgb(var(--color-content));
+  }
 }
 
 @media (min-width: 1024px) {
@@ -7773,6 +7796,11 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-slate-800\/50:hover {
+  --tw-shadow-color: rgb(30 41 59 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .hover\:outline-none:hover {
@@ -8535,10 +8563,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     visibility: visible;
   }
 
-  .md\:invisible {
-    visibility: hidden;
-  }
-
   .md\:mb-0 {
     margin-bottom: 0px;
   }
@@ -8620,6 +8644,10 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     width: fit-content;
   }
 
+  .md\:w-full {
+    width: 100%;
+  }
+
   .md\:min-w-96 {
     min-width: 24rem;
   }
@@ -8630,6 +8658,10 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
   }
 
   .md\:flex-nowrap {
@@ -8679,6 +8711,11 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     text-align: left;
   }
 
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -8687,16 +8724,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 }
 
