--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -4417,10 +4417,6 @@ input.tab:checked + .tab-content,
   margin-bottom: 0.125rem;
 }
 
-.ml-0 {
-  margin-left: 0px;
-}
-
 .ml-8 {
   margin-left: 2rem;
 }
@@ -4657,8 +4653,24 @@ input.tab:checked + .tab-content,
   height: 100vh;
 }
 
-.h-\[36\] {
-  height: 36;
+.h-\[60\%\] {
+  height: 60%;
+}
+
+.h-\[30\%\] {
+  height: 30%;
+}
+
+.h-\[30p\] {
+  height: 30p;
+}
+
+.h-\[30px\] {
+  height: 30px;
+}
+
+.h-\[250px\] {
+  height: 250px;
 }
 
 .max-h-14 {
@@ -4735,10 +4747,6 @@ input.tab:checked + .tab-content,
 
 .w-24 {
   width: 6rem;
-}
-
-.w-3\/12 {
-  width: 25%;
 }
 
 .w-32 {
@@ -4863,40 +4871,12 @@ input.tab:checked + .tab-content,
   width: 100vw;
 }
 
-.w-56 {
-  width: 14rem;
-}
-
-.w-9\/12 {
-  width: 75%;
-}
-
-.w-8\/12 {
-  width: 66.666667%;
-}
-
-.w-\[5rem\] {
-  width: 5rem;
-}
-
-.w-\[5em\] {
-  width: 5em;
-}
-
-.w-\[100em\] {
-  width: 100em;
-}
-
-.w-\[50em\] {
-  width: 50em;
+.w-\[40\%\] {
+  width: 40%;
 }
 
 .min-w-0 {
   min-width: 0px;
-}
-
-.min-w-\[1000px\] {
-  min-width: 1000px;
 }
 
 .min-w-\[100px\] {
@@ -5499,6 +5479,10 @@ input.tab:checked + .tab-content,
   border-color: rgb(var(--color-content-link) / 0.4);
 }
 
+.border-contrast\/50 {
+  border-color: rgb(var(--color-contrast) / 0.5);
+}
+
 .border-danger {
   --tw-border-opacity: 1;
   border-color: rgb(220 76 100 / var(--tw-border-opacity));
@@ -5597,14 +5581,6 @@ input.tab:checked + .tab-content,
 
 .border-white\/5 {
   border-color: rgb(255 255 255 / 0.05);
-}
-
-.border-contrast\/30 {
-  border-color: rgb(var(--color-contrast) / 0.3);
-}
-
-.border-contrast\/50 {
-  border-color: rgb(var(--color-contrast) / 0.5);
 }
 
 .border-b-primary {
@@ -5831,11 +5807,6 @@ input.tab:checked + .tab-content,
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
-.bg-blue-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -5933,11 +5904,6 @@ input.tab:checked + .tab-content,
   stroke: rgb(255 255 255 / 0.2);
 }
 
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -5965,10 +5931,6 @@ input.tab:checked + .tab-content,
 
 .p-10 {
   padding: 2.5rem;
-}
-
-.p-16 {
-  padding: 4rem;
 }
 
 .p-2 {
@@ -7299,10 +7261,6 @@ body > div.z-\[1070\] > div > div > :is(.dark .dark\:hover\:bg-transparent:hover
   body > div.z-\[1070\] > div > div > div.md\:flex-row.flex.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
     color: rgb(var(--color-content));
   }
-
-  body > div.z-\[1070\] > div > div > div.md\:w-full.flex.flex-row.items-center.justify-between.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
-    color: rgb(var(--color-content));
-  }
 }
 
 @media (min-width: 1024px) {
@@ -7652,6 +7610,10 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   background-color: rgb(0 0 0 / 0.05);
 }
 
+.hover\:bg-contrast\/70:hover {
+  background-color: rgb(var(--color-contrast) / 0.7);
+}
+
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -7688,14 +7650,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-contrast\/60:hover {
-  background-color: rgb(var(--color-contrast) / 0.6);
-}
-
-.hover\:bg-contrast\/70:hover {
-  background-color: rgb(var(--color-contrast) / 0.7);
 }
 
 .hover\:bg-gradient-to-br:hover {
@@ -7812,11 +7766,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-slate-800\/50:hover {
-  --tw-shadow-color: rgb(30 41 59 / 0.5);
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .hover\:outline-none:hover {
@@ -8611,6 +8560,10 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     height: 400px;
   }
 
+  .md\:h-\[100\%\] {
+    height: 100%;
+  }
+
   .md\:w-10 {
     width: 2.5rem;
   }
@@ -8660,10 +8613,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
     width: fit-content;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:min-w-96 {
     min-width: 24rem;
   }
@@ -8674,10 +8623,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:flex-col {
-    flex-direction: column;
   }
 
   .md\:flex-nowrap {
