--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -4653,26 +4653,6 @@ input.tab:checked + .tab-content,
   height: 100vh;
 }
 
-.h-\[60\%\] {
-  height: 60%;
-}
-
-.h-\[30\%\] {
-  height: 30%;
-}
-
-.h-\[30p\] {
-  height: 30p;
-}
-
-.h-\[30px\] {
-  height: 30px;
-}
-
-.h-\[250px\] {
-  height: 250px;
-}
-
 .max-h-14 {
   max-height: 3.5rem;
 }
@@ -4869,10 +4849,6 @@ input.tab:checked + .tab-content,
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[40\%\] {
-  width: 40%;
 }
 
 .min-w-0 {
@@ -5460,6 +5436,10 @@ input.tab:checked + .tab-content,
 
 .border-t-2 {
   border-top-width: 2px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
 }
 
 .border-solid {
@@ -8558,10 +8538,6 @@ body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg
 
   .md\:h-\[400px\] {
     height: 400px;
-  }
-
-  .md\:h-\[100\%\] {
-    height: 100%;
   }
 
   .md\:w-10 {
